--- a/voting/index.html
+++ b/voting/index.html
@@ -2,42 +2,76 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>2025 부스 추천/투표</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>2025 부스 추천/투표</title>
 
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 
 <style>
+/* ---------------- 전체 화면 + 배경 ---------------- */
 body {
-  margin:0; height:100vh;
+  margin:0; padding:0; min-height:100vh;
   background: linear-gradient(180deg, #020617 0%, #081129 60%, #000814 100%);
   font-family: 'Noto Sans KR', sans-serif;
   color:#fff;
   display:flex; flex-direction:column; justify-content:center; align-items:center;
   text-align:center;
+  overflow-x:hidden;
 }
 
-h1 { font-size: clamp(28px, 5vw, 48px); margin-bottom:10px; }
-.countdown { font-size: clamp(20px,4vw,36px); font-weight:600; margin-bottom:20px; }
-
-button {
-  background: linear-gradient(135deg, #6d5dfc, #b372ff);
-  border:none; border-radius:2rem; padding:14px 40px;
-  font-size:18px; font-weight:700; color:#fff; cursor:pointer;
-  transition: all 0.25s ease;
-  box-shadow: 0 0 20px rgba(120,100,255,0.3);
+/* ---------------- 제목/카운트다운 ---------------- */
+h1 {
+  font-size: clamp(24px,5vw,48px);
+  margin-bottom:12px;
 }
-button:hover { transform:scale(1.05); box-shadow:0 0 30px rgba(180,140,255,0.6); }
+.countdown {
+  font-size: clamp(18px,4vw,36px);
+  font-weight:600; margin-bottom:24px;
+}
 
-.input-box { margin:20px 0; }
+/* ---------------- 카드 형태 입력폼 ---------------- */
+#formContainer {
+  background: rgba(0,0,0,0.4);
+  padding: 24px 32px;
+  border-radius: 1.5rem;
+  box-shadow: 0 0 20px rgba(255,255,255,0.1);
+  max-width:400px; width:90%;
+  display:flex; flex-direction:column; align-items:center;
+}
+
+/* ---------------- 입력창 ---------------- */
 input, textarea {
-  background: transparent; border:2px solid rgba(255,255,255,0.6);
-  border-radius:1rem; padding:12px; color:#fff; font-size:16px;
-  width:260px; outline:none; margin-bottom:10px;
+  background: rgba(255,255,255,0.05);
+  border:2px solid rgba(255,255,255,0.6);
+  border-radius:1rem;
+  padding:16px;
+  margin-bottom:16px;
+  width:100%;
+  font-size:16px;
+  color:#fff;
+  outline:none;
 }
 textarea { resize:none; height:120px; }
+
+/* ---------------- 버튼 ---------------- */
+button {
+  background: linear-gradient(135deg, #6d5dfc, #b372ff);
+  border:none; border-radius:2rem;
+  padding:16px 32px; font-size:18px; font-weight:700;
+  color:#fff; cursor:pointer; transition: all 0.25s ease;
+  width:100%; max-width:200px;
+  box-shadow: 0 0 20px rgba(120,100,255,0.3);
+}
+button:hover {
+  transform:scale(1.05);
+  box-shadow: 0 0 30px rgba(180,140,255,0.6);
+}
+
+/* ---------------- 체크박스 ---------------- */
+input[type=checkbox] { margin-right:8px; transform:scale(1.3); margin-bottom:12px; }
+label { display:flex; align-items:center; justify-content:flex-start; margin-bottom:12px; font-size:16px; }
 </style>
 </head>
 <body>
@@ -79,25 +113,21 @@ function updateCountdown(){
   const mode = getMode();
   if(mode=="recommend") target = recommendEnd;
   else if(mode=="vote") target = voteEnd;
-  else {
-    document.getElementById("countdown").textContent = "--:--:--";
-    return;
-  }
-
+  else { document.getElementById("countdown").textContent="--:--:--"; return; }
   const diff = target-now;
   const d = Math.floor(diff/86400000);
   const h = Math.floor((diff%86400000)/3600000);
   const m = Math.floor((diff%3600000)/60000);
   const s = Math.floor((diff%60000)/1000);
-  document.getElementById("countdown").textContent =
-    (d>0? d+"일 ":"") + String(h).padStart(2,"0")+":"+String(m).padStart(2,"0")+":"+String(s).padStart(2,"0");
+  document.getElementById("countdown").textContent=
+    (d>0? d+"일 ":"")+String(h).padStart(2,"0")+":"+String(m).padStart(2,"0")+":"+String(s).padStart(2,"0");
 }
 setInterval(updateCountdown,1000);
 updateCountdown();
 
 /* ---------------- 추천 폼 ---------------- */
 async function showRecommendationForm(){
-  const container = document.getElementById("formContainer");
+  const container=document.getElementById("formContainer");
   container.innerHTML="";
   let step=0; const data={};
 
@@ -109,15 +139,13 @@ async function showRecommendationForm(){
       const btn=document.createElement("button"); btn.textContent="다음";
       btn.onclick=()=>{ if(!input.value){alert("학번 필수"); return;} data.studentId=input.value; step++; renderStep(); };
       container.appendChild(btn);
-    }
-    else if(step==1){
+    } else if(step==1){
       const input=document.createElement("input"); input.placeholder="부스 제목 입력(필수)";
       container.appendChild(input);
       const btn=document.createElement("button"); btn.textContent="다음";
       btn.onclick=()=>{ if(!input.value){alert("제목 필수"); return;} data.title=input.value; step++; renderStep(); };
       container.appendChild(btn);
-    }
-    else if(step==2){
+    } else if(step==2){
       const textarea=document.createElement("textarea"); textarea.placeholder="부스 설명 입력(필수)";
       container.appendChild(textarea);
       const btn=document.createElement("button"); btn.textContent="제출";
@@ -140,7 +168,7 @@ async function showRecommendationForm(){
 
 /* ---------------- 투표 폼 ---------------- */
 async function showVoteForm(){
-  const container = document.getElementById("formContainer");
+  const container=document.getElementById("formContainer");
   container.innerHTML="";
   let step=0; const data={};
 
@@ -155,8 +183,7 @@ async function showVoteForm(){
       const btn=document.createElement("button"); btn.textContent="다음";
       btn.onclick=()=>{ if(!input.value){alert("학번 필수"); return;} data.studentId=input.value; step++; renderStep(); };
       container.appendChild(btn);
-    }
-    else if(step==1){
+    } else if(step==1){
       const input=document.createElement("input"); input.placeholder="인증 코드 입력(필수)";
       container.appendChild(input);
       const btn=document.createElement("button"); btn.textContent="다음";
@@ -167,18 +194,18 @@ async function showVoteForm(){
         step++; renderStep();
       };
       container.appendChild(btn);
-    }
-    else if(step==2){
+    } else if(step==2){
       candidates.forEach(c=>{
+        const label=document.createElement("label");
         const checkbox=document.createElement("input"); checkbox.type="checkbox"; checkbox.value=c;
-        container.appendChild(checkbox); container.appendChild(document.createTextNode(c));
-        container.appendChild(document.createElement("br"));
+        label.appendChild(checkbox); label.appendChild(document.createTextNode(c));
+        container.appendChild(label);
       });
       const btn=document.createElement("button"); btn.textContent="제출";
       btn.onclick=async()=>{
         const checked = Array.from(container.querySelectorAll("input[type=checkbox]"))
                         .filter(i=>i.checked).map(i=>i.value);
-        if(checked.length==0 || checked.length>2){alert("2개까지 선택 가능"); return;}
+        if(checked.length==0 || checked.length>2){alert("최대 2개 선택"); return;}
         const today = new Date().toISOString().slice(0,10);
         const voteId = data.studentId+"_"+today;
         const doc = await db.collection("votes").doc(voteId).get();
@@ -197,12 +224,12 @@ async function showVoteForm(){
 /* ---------------- 모드 자동 실행 ---------------- */
 function startApp(){
   const mode=getMode();
-  if(mode=="recommend") showRecommendationForm();
-  else if(mode=="vote") showVoteForm();
-  else document.getElementById("formContainer").innerHTML="<p>투표가 종료되었습니다.</p>";
+  const statusText=document.getElementById("statusText");
+  if(mode=="recommend"){ statusText.textContent="현재 부스 주제 추천 진행중"; showRecommendationForm(); }
+  else if(mode=="vote"){ statusText.textContent="현재 부스 주제 투표 진행중"; showVoteForm(); }
+  else { statusText.textContent="투표가 종료되었습니다"; document.getElementById("formContainer").innerHTML="<p>투표가 종료되었습니다.</p>"; }
 }
 startApp();
 </script>
 </body>
 </html>
-
