--- a/voting/index.html
+++ b/voting/index.html
@@ -75,8 +75,49 @@ button:hover {
 }
 
 /* ---------------- 체크박스 ---------------- */
-input[type=checkbox] { margin-right:8px; transform:scale(1.3); margin-bottom:12px; }
-label { display:flex; align-items:center; justify-content:flex-start; margin-bottom:12px; font-size:16px; }
+/* ---------------- 체크박스 ---------------- */
+label {
+  display: flex;
+  align-items: center;
+  gap: 10px;              /* 체크박스와 글씨 사이 간격 */
+  margin-bottom: 12px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+input[type=checkbox] {
+  appearance: none;       /* 브라우저 기본 체크박스 제거 */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid rgba(255,255,255,0.6);
+  border-radius: 6px;     /* 둥근 모서리 */
+  background: rgba(255,255,255,0.1);
+  cursor: pointer;
+  position: relative;
+  transition: all 0.2s ease;
+}
+
+input[type=checkbox]:hover {
+  border-color: #b372ff;
+}
+
+input[type=checkbox]:checked {
+  background: linear-gradient(135deg, #6d5dfc, #b372ff);
+  border-color: #6d5dfc;
+}
+
+input[type=checkbox]:checked::after {
+  content: "✔";
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -58%);
+}
+
 </style>
 </head>
 <body>
