--- a/voting/index.html
+++ b/voting/index.html
@@ -78,25 +78,30 @@ button:hover {
 /* ---------------- 체크박스 ---------------- */
 label {
   display: flex;
-  align-items: center;
-  gap: 10px;              /* 체크박스와 글씨 사이 간격 */
+  align-items: center;    /* 세로 중앙 정렬 */
+  gap: 10px;              /* 체크박스와 텍스트 간격 */
   margin-bottom: 12px;
   font-size: 16px;
+  line-height: 1;         /* 텍스트 줄 높이 조정 */
   cursor: pointer;
 }
 
 input[type=checkbox] {
-  appearance: none;       /* 브라우저 기본 체크박스 제거 */
+  appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 20px;
   height: 20px;
   border: 2px solid rgba(255,255,255,0.6);
-  border-radius: 6px;     /* 둥근 모서리 */
+  border-radius: 6px;
   background: rgba(255,255,255,0.1);
   cursor: pointer;
   position: relative;
   transition: all 0.2s ease;
+  flex-shrink: 0;          /* 체크박스 크기 고정 */
+  display: flex;           /* 내부 콘텐츠 정렬 */
+  align-items: center;     
+  justify-content: center; 
 }
 
 input[type=checkbox]:hover {
@@ -112,11 +117,9 @@ input[type=checkbox]:checked::after {
   content: "✔";
   color: white;
   font-size: 14px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -58%);
+  line-height: 1;          /* 아이콘도 중앙에 오도록 */
 }
+
 
 </style>
 </head>
