--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
     font-family: "Inter", "Noto Sans KR", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   }
 
+  /* 공지 배너 */
+  .banner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+    text-align: center;
+    padding: 12px 16px;
+    font-size: 16px;
+    z-index: 9999;
+    backdrop-filter: blur(6px);
+  }
+  .banner a {
+    color: #80bfff;
+    text-decoration: underline;
+    font-weight: 600;
+  }
+
   /* 희미한 은하수/성운 효과 */
   .nebula {
     position:fixed;
@@ -64,7 +84,7 @@
   .center .big {
     color: #ffffff;
     font-weight: 800;
-    font-size: clamp(48px, 18vw, 220px); /* 반응형 폰트 크기 */
+    font-size: clamp(48px, 18vw, 220px);
     letter-spacing: 6px;
     text-shadow:
       0 2px 12px rgba(0,0,0,0.6),
@@ -73,22 +93,21 @@
     line-height: 0.9;
     mix-blend-mode: screen;
   }
-
-
 </style>
 </head>
 <body>
+  <!-- 공지 배너 -->
+  <div class="banner">
+    현재 축제 부스 추천 투표 진행 중 — 
+    <a href="/voting/">투표하러 가기</a>
+  </div>
+
   <div class="nebula" aria-hidden="true"></div>
   <div class="stars" aria-hidden="true"></div>
-
   <div class="meteors" id="meteors" aria-hidden="true"></div>
 
   <div class="center" role="banner" aria-label="메인 텍스트">
     <div class="big">2025209</div>
   </div>
-
-<script>
-
-</script>
 </body>
 </html>
